--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -4614,6 +4614,26 @@ etric {SAR} data},
   number = {3}
 }
 
+@ARTICLE{Roseanblatt56,
+	author = {Rosenblatt, M},
+	title = {Remarks on Some Nonparametric Estimates of a Density Function},
+	journal = {Annals of Mathematical Statistics},
+	year = {1956},
+	volume = {27},
+	pages = {832--837},
+	number = {3}
+}
+
+@ARTICLE{mejailfreryjacobobustos2001,
+	author = {Mejail, M. E. and Frery, A. C. and Jacobo-Berlles, J. and Bustos,
+	O. H.},
+	title = {Approximation of Distributions for {SAR} Images: Proposal, Evaluation
+	and Practical Consequences},
+	journal = {Latin American Applied Research},
+	year = {2001},
+	volume = {31},
+	pages = {83--92}
+}
 @article{Brown1999,
 	author = {Brown, B. M. and Chen, S. X.},
 	title = {Beta-Bernstein Smoothing for Regression Curves with Compact Support},
