--- a/Source/Tesis/titlepage.tex
+++ b/Source/Tesis/titlepage.tex
@@ -73,7 +73,7 @@
 \TitleBlock{\scshape {\large Autor:\textbf{ Julia Analía Cassetti}}}
 \vspace{1cm}
 
-\TitleBlock{\scshape {\large Director: Dr. Alejandro Frery Orgambide}}
+\TitleBlock{\scshape {\large Director: Dr.\ Alejandro C.\ Frery}}
 \vspace{1.5cm}
 
 \TitleBlock{Diciembre 2019}
