--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -191,7 +191,7 @@
 }
 
 @ARTICLE{MellinAnalysisPolSAR,
-  author = {Anfinsen, S.N. and Eltoft, T.},
+  author = {Anfinsen, S. N. and Eltoft, T.},
   title = {Application of the Matrix-Variate {M}ellin Transform to Analysis
 	of Polarimetric Radar Images},
   journal = {IEEE Transactions on Geoscience and Remote Sensing},
@@ -242,7 +242,7 @@
   isbn = {9783540408550}
 }
 
-@INPROCEEDINGS{4218961,
+@INPROCEEDINGS{Aviyente2007,
   author = {Aviyente, S. and Ahmad, F. and Amin, M. G.},
   title = {Information Theoretic Measures for Change Detection in Urban Sensing
 	Applications},
@@ -4887,7 +4887,7 @@ etric {SAR} data},
 }
 
 @ARTICLE{anfinsen2009,
-	author = {Anfinsen, S and Doulgeris, A and Eltoft, T},
+	author = {Anfinsen, S. and Doulgeris, A and Eltoft, T},
 	title = {Estimation of the Equivalent Number of Looks in
 	Polarimetric Synthetic Aperture Radar Imagery},
 	journal = {IEEE Transactions on Geoscience and Remote Sensing},
@@ -4987,7 +4987,7 @@ etric {SAR} data},
 
 @article{nicolas2002,
 	title={Introduction to second kind statistics: Application of log-moments and log-cumulants to the analysis of radar image distributions},
-	author={Nicolas, J-M. and Anfinsen, S. N.},
+	author={Nicolas, J. M. and Anfinsen, S. N.},
 	journal={Traitement du Signal},
 	volume={19},
 	number={3},
@@ -5406,7 +5406,7 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/env.658},
 	month={Feb},}
 
 @article{Beran1977,
-	author = "Beran, R",
+	author = "Beran, R.",
 	doi = "10.1214/aos/1176343842",
 	fjournal = "The Annals of Statistics",
 	journal = "Ann. Statist.",
@@ -5475,7 +5475,7 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/env.658},
 
 
 @article{Parr1980,
-	author = { William C.   Parr  and  William R.   Schucany },
+	author = { W. C.   Parr  and  W R.   Schucany },
 	title = {Minimum Distance and Robust Estimation},
 	journal = {Journal of the American Statistical Association},
 	volume = {75},
@@ -5557,7 +5557,7 @@ doi = {10.1109/IGARSS.2017.8127630}
 	issn = "0378-3758",
 	doi = "https://doi.org/10.1016/0378-3758(94)90025-6",
 	url = "http://www.sciencedirect.com/science/article/pii/0378375894900256",
-	author = "T.P. Hettmansperger and I. Hueter and J. Hüsler",
+	author = "T. P. Hettmansperger and I. Hueter and J. Hüsler",
 	keywords = "Robust, M-estimation, R-estimation, location-scale model, Cramér-von Mises statistic"
 }
 
@@ -5652,7 +5652,7 @@ doi = {10.1109/IGARSS.2017.8127630}
 
 @article{JainSrivastava2007,
 	title={On Symmetric Information Divergence Measures of Csiszar’s f - Divergence Class},
-	author={K.Jain and A. Srivastava},
+	author={K. Jain and A. Srivastava},
 	journal={Journal of Applied Mathematics, Statistics and Informatics},
 	year={2007},
 	volume = {3},
@@ -5699,7 +5699,7 @@ doi = {10.1109/IGARSS.2017.8127630}
 	month={July},}
 
 @article{Dragomir2002,
-	author = {Dragomir, S},
+	author = {Dragomir, S.},
 	year = {2002},
 	month = {01},
 	pages = {},
@@ -5917,8 +5917,7 @@ doi = {10.1109/IGARSS.2017.8127630}
 
 	@misc{Sarmap2009,
 	author = {Sarmap},
-	title = {Synthetic Aperture Radar
-	and Sarscape. The Earth Observation Information Gateway},
+	title = {Synthetic Aperture Radar and Sarscape. The Earth Observation Information Gateway},
 	year = {2009},
 	url = {URL{http://www.sarmap.ch/pdf/SAR-Guidebook.pdf}},
 	note = "[Web; accedido el 21-10-2019]",
@@ -6093,3 +6092,44 @@ doi = {10.1109/IGARSS.2017.8127630}
 	}
 	
 }
+
+@ARTICLE{Penna2019,
+	author={Penna, P. and Mascarenhas, N.},
+	journal={IEEE Transactions on Geoscience and Remote Sensing},
+	title={SAR Speckle Nonlocal Filtering With Statistical Modeling of Haar Wavelet Coefficients and Stochastic Distances},
+	year={2019},
+	volume={57},
+	number={9},
+	pages={7194-7208},
+	keywords={AWGN;filtering theory;gamma distribution;image denoising;radar imaging;speckle;synthetic aperture radar;wavelet transforms;gamma distributions;stochastic distances;NLM filter;Euclidean distance;SAR speckle nonlocal filtering;statistical modeling;haar wavelet coefficients;coherent processing;synthetic aperture radar systems;multiplicative speckle noise;granular appearance;surface images;constant task;image processing literature;current state-of-the-art filters;remote sensing area;traditional nonlocal means algorithm;additive white Gaussian noise;single-look speckle noise;intensity SAR images;Haar coefficients;Speckle;Synthetic aperture radar;Wavelet transforms;Radar polarimetry;AWGN;Wavelet domain;Stochastic processes;Denoising;exponential-polynomial (EP) distribution;Haar wavelet;nonlocal means (NLM) algorithm;synthetic aperture radar (SAR) image;speckle noise;stochastic distances},
+	doi={10.1109/TGRS.2019.2912153},
+	ISSN={1558-0644},
+	month={Sep.},}
+
+@Article{Carvalho2019,
+	AUTHOR = {Carvalho, N. and Sant’Anna Bins, L. and Siqueira Sant’Anna, S.},
+	TITLE = {Analysis of Stochastic Distances and Wishart Mixture Models Applied on PolSAR Images},
+	JOURNAL = {Remote Sensing},
+	VOLUME = {11},
+	YEAR = {2019},
+	NUMBER = {24},
+	ARTICLE-NUMBER = {2994},
+	URL = {https://www.mdpi.com/2072-4292/11/24/2994},
+	ISSN = {2072-4292},
+	ABSTRACT = {This paper address unsupervised classification strategies applied to Polarimetric Synthetic Aperture Radar (PolSAR) images. We analyze the performance of complex Wishart distribution, which is a widely used model for multi-look PolSAR images, and the robustness of five stochastic distances (Bhattacharyya, Kullback-Leibler, R&eacute;nyi, Hellinger and Chi-square) between Wishart distributions. Two unsupervised classification strategies were chosen: the Stochastic Clustering (SC) algorithm, which is based on the K-means algorithm but uses stochastic distance as the similarity metric, and the Expectation-Maximization (EM) algorithm for Wishart Mixture Model. With the aim of assessing the performance of all algorithms presented here, we performed a Monte Carlo simulation over a set of simulated PolSAR images. A second experiment was conducted using the study area of Tapaj&oacute;s National Forest and the surrounding area, in Brazilian Amazon Forest. The PolSAR images were obtained by the satellite PALSAR. The results, in both experiments, suggest that the EM algorithm and the SC with Hellinger and the SC with Bhattacharyya distance provide a better classification performance. We also analyze the initialization problem for SC and EM algorithms, and we demonstrate how the initial centroid choice influences the final classification result.},
+	DOI = {10.3390/rs11242994}
+}
+
+@ARTICLE{Nogueira2019,
+	author={Nogueira, F. and  Marques, R. and Medeiros, F.},
+	journal={IEEE Geoscience and Remote Sensing Letters},
+	title={SAR Image Segmentation Based on Unsupervised Classification of Log-Cumulants Estimates},
+	year={2019},
+	volume={},
+	number={},
+	pages={1-3},
+	keywords={Image segmentation;Support vector machines;Radar polarimetry;Synthetic aperture radar;Training;Estimation;Data models;Gaussian mixture;log-cumulants;support vector machine (SVM);synthetic aperture radar (SAR) image segmentation.},
+	doi={10.1109/LGRS.2019.2941075},
+	ISSN={1558-0571},
+	month={},}
+
