--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -6133,3 +6133,16 @@ doi = {10.1109/IGARSS.2017.8127630}
 	ISSN={1558-0571},
 	month={},}
 
+@article{kokonendji2018,
+	author = "Kokonendji, Célestin C. and Libengué Dobélé-Kpoka, Francial Giscard B.",
+	fjournal = "African Diaspora Journal of Mathematics. New Series",
+	journal = "Afr. Diaspora J. Math. (N.S.)",
+	number = "1",
+	pages = "87--97",
+	publisher = "Mathematical Research Publishers",
+	title = "Asymptotic Results For Continuous Associated Kernel Estimators of Density Functions",
+	url = "https://projecteuclid.org:443/euclid.adjm/1545361441",
+	volume = "21",
+	year = "2018"
+}
+
