--- a/Source/CorreccionTesis/tesis.tex
+++ b/Source/CorreccionTesis/tesis.tex
@@ -16,13 +16,11 @@
 % cuando se  está en un apéndice.  Eso se utiliza en  la definición de
 % las cabeceras.
 \usepackage{titlesec}
-\usepackage{amsfonts,amssymb}
-\usepackage{amsmath}
+\usepackage{amsfonts,amssymb,amsmath,amsthm}
 \usepackage{graphicx}
 \usepackage{enumerate}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
-\usepackage{amsthm}
 \usepackage{lipsum,multicol}
 %\usepackage{calligra}
 %\usepackage{calrsfs}
@@ -32,7 +30,6 @@
 %\usepackage{dsfont}
 \usepackage{filecontents}
 %\usepackage{verbatim}
-\usepackage{amssymb}
 \usepackage[T1]{fontenc}
 %\usepackage[numbers]{natbib}
 \usepackage{color}
@@ -276,7 +273,6 @@
 %% y un ejemplo.
 %\bibliographystyle{agsm}
 \addcontentsline{toc}{chapter}{Bibliografí­a}
-\bibliographystyle{agsm}
 \bibliography{../../Bibliography/bib_julia}
 \label{bibliografia}
 
